--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,7 +1,101 @@
-@import 'pod-styles';
+@import 'oil-pastels';
 
 /* ELEMENTS */
 html,
 body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  font-family: courier, 'Courier New', monospace;
+  background-color: map-get($oil-pastels, 'white');
+  color: map-get($oil-pastels, 'black');
+  font-size: 16px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: Arial, Helvetica, Verdana, sans-serif;
+}
+article {
+  flex: 5;
+}
+aside,
+nav {
+  flex: 1;
+}
+
+/* TYPOGRAPHY */
+.sans {
+  font-family: Arial, Helvetica, Verdana, sans-serif;
+}
+.monospace {
   font-family: courier, 'Courier New', monospace;
 }
+
+/* LAYOUT */
+.h-100 {
+  height: 100%;
+}
+.w-100 {
+  width: 100%;
+}
+.w-62 {
+  width: 62%;
+}
+.w-38 {
+  width: 38%;
+}
+.overflow-scroll {
+  overflow: scroll;
+}
+
+/* MARGIN & PADDING */
+.m-4 {
+  margin: 1rem;
+}
+.m-8 {
+  margin: 2rem;
+}
+
+/* FLEXBOX */
+.d-flex {
+  display: flex;
+}
+.flex-col {
+  flex-direction: column;
+}
+.flex-row {
+  flex-direction: row;
+}
+.space-between {
+  justify-content: space-between;
+}
+
+/* COMPONENTS */
+.viewport {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+.container {
+  max-width: 600px;
+  padding: 2rem;
+}
+.main {
+  flex: 1;
+}
+.hbox {
+  display: flex;
+  flex-direction: row;
+}
+.vbox {
+  display: flex;
+  flex-direction: column;
+}
+
+@import 'pod-styles';
