set up video-player

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -76,6 +76,20 @@ nav {
   justify-content: space-between;
 }
 
+/* DISPLAY */
+.opacity-0 {
+  opacity: 0;
+}
+.opacity-38 {
+  opacity: 38;
+}
+.opacity-62 {
+  opacity: 62;
+}
+.opacity-100 {
+  opacity: 100;
+}
+
 /* COMPONENTS */
 .viewport {
   width: 100%;
