--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,8 @@
 @import 'oil-pastels';
 
+/* CONSTANTS */
+$golden-ratio: 0.618033988749855;
+
 /* ELEMENTS */
 html,
 body {
@@ -12,6 +15,7 @@ body {
   background-color: map-get($oil-pastels, 'white');
   color: map-get($oil-pastels, 'black');
   font-size: 16px;
+  overflow: hidden;
 }
 
 h1,
@@ -46,10 +50,10 @@ $monospace-font-family: courier, 'Courier New', monospace;
   width: 100%;
 }
 .w-62 {
-  width: 62%;
+  width: $golden-ratio * 100%;
 }
 .w-38 {
-  width: 38%;
+  width: 100% - $golden-ratio * 100%;
 }
 .overflow-scroll {
   overflow: scroll;
@@ -77,15 +81,20 @@ $monospace-font-family: courier, 'Courier New', monospace;
   justify-content: space-between;
 }
 
+/* SHADOWS */
+$box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 1-$golden-ratio),
+  0 (0.5 * 0.125rem) (0.5 * 0.25rem)
+    rgba(0, 0, 0, (1-$golden-ratio) * $golden-ratio);
+
 /* DISPLAY */
 .opacity-0 {
   opacity: 0;
 }
 .opacity-38 {
-  opacity: 38;
+  opacity: 100 - $golden-ratio * 100;
 }
 .opacity-62 {
-  opacity: 62;
+  opacity: $golden-ratio * 100;
 }
 .opacity-100 {
   opacity: 100;
