choices and their transitions working

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,7 +15,7 @@ body {
   background-color: map-get($oil-pastels, 'white');
   color: map-get($oil-pastels, 'black');
   font-size: 16px;
-  // overflow: hidden;
+  overflow: hidden;
 }
 
 h1,
