punt, restrict selections to all plans operators

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -139,7 +139,7 @@ $breakpoint-xl: 1200px;
 */
 @font-face {
   font-family: 'Arial Black';
-  src: url('/s/fonts/Arial-Black.otf');
+  src: url('/fonts/Arial-Black.otf');
 }
 $arial-font-family: 'Arial Black', 'Arial Bold', Arial-BoldMT, -apple-system,
   system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
