--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -111,6 +111,13 @@ $box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 1-$golden-ratio),
   width: 100%;
   height: 100%;
   margin: 0;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: auto;
 }
 .container {
   max-width: 600px;
